# CurveTesting

./: .gitignore  CMakeLists.txt  README.md
src/: circle.cpp  circle.h  config.h  curve.cpp  curve.h  ellipse.cpp  ellipse.h  helix.cpp  helix.h  main.cpp
